--- a/src/app/master-select-window/master-select-window.component.html
+++ b/src/app/master-select-window/master-select-window.component.html
@@ -1,5 +1,5 @@
 <div style="background: #F56C6C">
-    <p>НАХОДИТЬСЯ В РАЗРАБОТКЕ</p>
+    <p>ЗНАХОДИТЬСЯ В РОЗРОБЦІ/p>
 </div>
 <app-table-page [startData]="data" title=" вибір замовлення"
                 [mainColumn]="mainColumn" [stateFilterDisable]="true"
