--- a/src/app/table-page/table-page.component.html
+++ b/src/app/table-page/table-page.component.html
@@ -84,7 +84,8 @@
                             ></app-period-date-filter>
                         </div>
                         <div class="p-mb-2 p-mr-2" style="width: 300px; position: relative;top:-10px">
-                            <app-state-filter [disabled]="stateFilterDisable" [onlyField]="true"
+                            <app-state-filter
+                                                [disabled]="stateFilterDisable" [onlyField]="true"
                                               (onSuggest)="updateData()"
                                               (onClear)="updateData()"
                             ></app-state-filter>
