--- a/src/app/widgets/filters/period-date-filter/period-date-filter.component.html
+++ b/src/app/widgets/filters/period-date-filter/period-date-filter.component.html
@@ -18,8 +18,8 @@
 <div   *ngIf="onlyField"   class="p-fluid  p-grid p-formgrid" style="width: 270px">
     <div class="p-field p-col-36 p-md-12">
         <p-dropdown (onChange)="changePeriod()"
-
-                    [options]="periods" [(ngModel)]="period"
+                    [disabled]="filterPeriodService.disableFastFiled"
+                    [options]="periods" [(ngModel)]="filterPeriodService.periodFastFilterData"
                     optionLabel="name"  [showClear]="true">
     </p-dropdown>
     </div>
