--- a/src/app/widgets/filters/state-filter/state-filter.component.html
+++ b/src/app/widgets/filters/state-filter/state-filter.component.html
@@ -9,10 +9,10 @@
 <div class="p-fluid  p-grid p-formgrid">
     <div class="p-field p-col-36 p-md-12">
 <p-dropdown *ngIf="onlyField"
-            [disabled]="disabled"
+            [disabled]="stateService.disableFastFiled"
              (onChange)="changeState()"  style="width: 300px" [showClear]="true"
              [options]="states"
-            [(ngModel)]="state" optionLabel="name"></p-dropdown>
+            [(ngModel)]="stateService.stateFastFilterData" optionLabel="name"></p-dropdown>
     </div>
 </div>
 
