--- a/src/app/widgets/filters/state-filter/state-filter.component.html
+++ b/src/app/widgets/filters/state-filter/state-filter.component.html
@@ -12,6 +12,7 @@
             [disabled]="stateService.disableFastFiled"
              (onChange)="changeState()"  style="width: 300px" [showClear]="true"
              [options]="states"
+            placeholder="стан"
             [(ngModel)]="stateService.stateFastFilterData" optionLabel="name"></p-dropdown>
     </div>
 </div>
@@ -26,7 +27,8 @@
         <div class="p-field p-col-36 p-md-12">
             <p-dropdown            [disabled]="disabled"
                                    (onChange)="changeState()"
-                                   [showClear]="true" placeholder="стан"
+                                   [showClear]="true"
+                                   placeholder="стан"
                         [options]="states" [(ngModel)]="state" optionLabel="name"></p-dropdown>
 
         </div>
