--- a/src/app/widgets/filters/period-date-filter/period-date-filter.component.html
+++ b/src/app/widgets/filters/period-date-filter/period-date-filter.component.html
@@ -19,7 +19,7 @@
     <div class="p-field p-col-36 p-md-12">
         <p-dropdown (onChange)="changePeriod()"
                     [disabled]="filterPeriodService.disableFastFiled"
-                    placeholder="перiод"
+                    placeholder="период"
                     [options]="periods" [(ngModel)]="filterPeriodService.periodFastFilterData"
                     optionLabel="name"  [showClear]="true">
     </p-dropdown>
@@ -28,7 +28,7 @@
 <div   *ngIf="!onlyField"   class="p-fluid  p-grid p-formgrid" style="width: 270px">
     <div class="p-field p-col-36 p-md-12">
         <p-dropdown (onChange)="changePeriod()"
-                    placeholder="перiод"
+                    placeholder="период"
                     [options]="periods" [(ngModel)]="period"
                     optionLabel="name"  [showClear]="true">
         </p-dropdown>
