--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,10 +35,12 @@
 
             <button pRipple pButton type="button" (click)="cancel()"
                     class=" p-button-danger"
+                    style="min-width: 8rem"
                     [label]="'loginPage.cancel' | translate" icon="pi pi-times"></button>
 
             <button pRipple pButton type="button" (click)="login()"
                     class=" p-button-success"
+                    style="min-width: 10rem"
                     [disabled]="selectedUser===null || selectedUser===undefined"
                     [label]="'loginPage.login' | translate" icon="pi pi-check"></button>
 
