--- a/src/app/widgets/filters/date-filter/date-filter.component.html
+++ b/src/app/widgets/filters/date-filter/date-filter.component.html
@@ -11,7 +11,7 @@
             <label for="val4">дни</label>
             <p-radioButton  name="groupname1" [value]="2" inputId="val5"
                            [(ngModel)]="menuChange" style="margin-right:5%;margin-left:5%;"></p-radioButton>
-            <label for="val5">месяци</label>
+            <label for="val5">месяцы</label>
             <p-radioButton  name="groupname1" [value]="3" inputId="val6"
                             [(ngModel)]="menuChange" style="margin-right:5%;margin-left:5%;"></p-radioButton>
             <label for="val6">период</label>
