--- a/src/app/table-page/table-page.component.html
+++ b/src/app/table-page/table-page.component.html
@@ -78,17 +78,20 @@
                             >
                             </button>
                         </div>
-                        <div *ngIf="standardFilterDisable" class="p-mb-2 p-mr-2" style="width: 300px; position: relative;top:-10px">
+                        <div *ngIf="standardFilterDisable" class="p-mb-2 p-mr-2"
+                             style="width: 300px; position: relative;top:-10px">
                             <app-detail-filter (onSuggest)="updateData()"
                                                (click)="confirmOnFilter($event)"
                             ></app-detail-filter>
                         </div>
-                        <div *ngIf="standardFilterDisable" class="p-mb-2 p-mr-2" style="width: 300px; position: relative;top:-10px">
+                        <div *ngIf="standardFilterDisable" class="p-mb-2 p-mr-2"
+                             style="width: 300px; position: relative;top:-10px">
                             <app-work-filter (onSuggest)="updateData()"
                                              (click)="confirmOnFilter($event)"
                             ></app-work-filter>
                         </div>
-                        <div *ngIf="standardFilterDisable" class="p-mb-2 p-mr-2" style="width: 300px; position: relative;top:-10px">
+                        <div *ngIf="standardFilterDisable" class="p-mb-2 p-mr-2"
+                             style="width: 300px; position: relative;top:-10px">
                             <app-work-status-filter
                                     [disabled]="stateFilterDisable" [onlyField]="true"
                                     (onSuggest)="updateData()"
@@ -152,7 +155,7 @@
                     <col style="width:30px">
                     <col style="width:30px">
                     <col *ngFor="let col of columns" style="{{'width:'+col.width+'px'}}">
-                    <col *ngIf="buttonActionDisable" style="width:150px">
+                    <!--                    <col *ngIf="buttonActionDisable" style="width:150px">-->
 
                 </colgroup>
             </ng-template>
@@ -168,8 +171,8 @@
                         {{col.header}}
                         <p-sortIcon [field]="col.header"></p-sortIcon>
                     </th>
-                    <th style="width:2rem;border-color: #f4f4f4" *ngIf="buttonActionDisable"
-                        [style]="{borderColor:'#f4f4f4', fontSize:'12px'}"></th>
+                    <!--                    <th style="width:2rem;border-color: #f4f4f4" *ngIf="buttonActionDisable"-->
+                    <!--                        [style]="{borderColor:'#f4f4f4', fontSize:'12px'}"></th>-->
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-rowData let-columns="columns" let-index="rowIndex">
@@ -183,7 +186,12 @@
                     </td>
                     <td *ngFor="let col of columns" class="ui-resizable-column" pResizableColumn
                         [style]="{borderColor:'#f4f4f4' , fontSize:'12px'}">
-                    <span *ngIf="rowData[col.field]==='yes' || rowData[col.field]==='1'">
+                        <span *ngIf="buttonActionDisable">
+                                                                        {{rowData[col.field]}}
+
+                        </span>
+                        <span *ngIf="!buttonActionDisable">
+                    <span *ngIf="(rowData[col.field]==='yes' || rowData[col.field]==='1') ">
                         <i class="pi pi-check"></i>
                         </span>
                         <span *ngIf="rowData[col.field]==='no' || rowData[col.field]==='0'"></span>
@@ -192,12 +200,13 @@
                         <span *ngIf="!(rowData[col.field]==='yes' || rowData[col.field]==='1') && !(rowData[col.field]==='no' || rowData[col.field]==='0')">
                                             {{rowData[col.field]}}
                     </span>
+                        </span>
                     </td>
-                    <td [style]="{borderColor:'#f4f4f4' , fontSize:'14px',zIndex:'2'}" *ngIf="buttonActionDisable">
+                    <!--                    <td [style]="{borderColor:'#f4f4f4' , fontSize:'14px',zIndex:'2'}" *ngIf="buttonActionDisable">-->
 
-                        <app-button-list-action></app-button-list-action>
+                    <!--                        <app-button-list-action></app-button-list-action>-->
 
-                    </td>
+                    <!--                    </td>-->
                 </tr>
             </ng-template>
             <ng-template pTemplate="emptymessage">
