--- a/src/app/widgets/filters/date-filter/date-filter.component.html
+++ b/src/app/widgets/filters/date-filter/date-filter.component.html
@@ -7,18 +7,18 @@
 
         <div style="display: flex;flex-direction: row;justify-content: center;align-content: center" >
             <p-radioButton name="groupname1" inputId="val4" [value]="1"
-                           [(ngModel)]="menuChange" style="margin-right:5%;margin-left:5%;"></p-radioButton>
+                           [(ngModel)]="menuChange" (onClick)="changeInputField()" style="margin-right:5%;margin-left:5%;"></p-radioButton>
             <label for="val4">дни</label>
             <p-radioButton  name="groupname1" [value]="2" inputId="val5"
-                           [(ngModel)]="menuChange" style="margin-right:5%;margin-left:5%;"></p-radioButton>
+                           [(ngModel)]="menuChange" (onClick)="changeInputField()" style="margin-right:5%;margin-left:5%;"></p-radioButton>
             <label for="val5">месяцы</label>
             <p-radioButton  name="groupname1" [value]="3" inputId="val6"
-                            [(ngModel)]="menuChange" style="margin-right:5%;margin-left:5%;"></p-radioButton>
+                            [(ngModel)]="menuChange"  (onClick)="changeInputField()" style="margin-right:5%;margin-left:5%;"></p-radioButton>
             <label for="val6">период</label>
         </div>
     </div>
 
-    <div style="position:relative;left:12px;display: flex; flex-direction: column;justify-content: center;width: 100%;align-content: center">
+    <div style="position:relative;left:22px;display: flex; flex-direction: column;justify-content: center;width: 100%;align-content: center">
         <p-calendar style="margin-bottom:3%;" [showIcon]="true" placeholder="дата от" (click)="changePeriod()" [(ngModel)]="dateFrom" *ngIf="menuChange===1" dateFormat="yy-mm-dd"
                   ></p-calendar>
         <p-calendar style="margin-bottom:3%;" [showIcon]="true" placeholder="дата до" (click)="changePeriod()" [(ngModel)]="dateTo" *ngIf="menuChange===1" dateFormat="yy-mm-dd"
