--- a/src/app/orders-page/orders.component.html
+++ b/src/app/orders-page/orders.component.html
@@ -1,6 +1,7 @@
 <app-table-page [startData]="data" [title]=" 'loginPage.listOrders' | translate"
                 [mainColumn]="mainColumn"
                 (onUpdateData)="updateData()"
+                (onLazyLoad)="twoDownload()"
                 [buttonActionDisable]="false"
                 [buttonItems]="[]"
                 [stateFilterDisable]="false"  *ngIf="data!=null"></app-table-page>
