--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-menu-bar></app-menu-bar>
 <div style="position: absolute;top:53px;left: 0px;height: 6px;width: 100%">
-<p-progressBar mode="indeterminate" *ngIf="apiService.barLoading" [style]="{'height': '6px'}"></p-progressBar>
+<p-progressBar mode="indeterminate" *ngIf="apiService.barLoading" [style]="{color:'chocolate','height': '6px'}"></p-progressBar>
 </div>
 <div id="main">
 
