--- a/src/app/widgets/filters/period-date-filter/period-date-filter.component.html
+++ b/src/app/widgets/filters/period-date-filter/period-date-filter.component.html
@@ -20,7 +20,7 @@
         <p-dropdown (onChange)="changePeriod()"
                     [disabled]="filterPeriodService.disableFastFiled"
                     placeholder="период"
-                    [options]="periods" [(ngModel)]="filterPeriodService.periodFastFilterData"
+                    [options]="fastPeriods" [(ngModel)]="filterPeriodService.periodFastFilterData"
                     optionLabel="name"  [showClear]="true">
     </p-dropdown>
     </div>
