--- a/src/app/widgets/filters/state-filter/state-filter.component.html
+++ b/src/app/widgets/filters/state-filter/state-filter.component.html
@@ -29,7 +29,7 @@
                                    (onChange)="changeState()"
 
                                    placeholder="статус"
-                        [options]="states" [(ngModel)]="state" optionLabel="name"></p-dropdown>
+                        [options]="states" [(ngModel)]="stateService.stateFilterData" optionLabel="name"></p-dropdown>
 
         </div>
     </div>
