--- a/src/app/table-page/table-page.component.html
+++ b/src/app/table-page/table-page.component.html
@@ -50,7 +50,9 @@
               [paginator]="true" -->
     <div style="height: 88vh;background: #f4f4f4;width: 100%">
         <p-table
-                [virtualScroll]="true" [virtualRowHeight]="5"
+                [virtualScroll]="true"
+                [virtualRowHeight]="1"
+                [rows]="200"
                 [reorderableColumns]="true"
                 class="table-style"
                 [loading]="apiService.isLoadingData"
