--- a/src/app/orders-page/orders.component.html
+++ b/src/app/orders-page/orders.component.html
@@ -1,4 +1,4 @@
-<app-table-page [startData]="data" [title]=" 'loginPage.listOrders' | translate"
+<app-table-page [startData]="data" [title]=" 'page.listOrders' | translate"
                 [mainColumn]="mainColumn"
                 (onUpdateData)="updateData()"
                 (onLazyLoad)="twoDownload()"
